# arbclaw

./: .gitignore  deploy.sh  docker-compose.yml
dashboard/: Dockerfile  package-lock.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: LatencyBar.tsx  PriceMatrix.tsx  SignalTable.tsx  SpreadHeatmap.tsx  StatsCards.tsx  StatusBar.tsx
dashboard/app/hooks/: useWebSocket.ts
dashboard/app/lib/: api.ts  types.ts
dashboard/app/orderbook/: OrderBookCompare.tsx  page.tsx
dashboard/app/performance/: CumulativeChart.tsx  FrequencyChart.tsx  PairChart.tsx  SymbolChart.tsx  page.tsx
data/: opportunities.csv  opportunities.json
docs/: CEX现货套利系统-开发设计文档-v1.0.md
engine/: Cargo.toml  Dockerfile
engine/src/: config.rs  main.rs  rates.rs
engine/src/feeds/: binance.rs  bithumb.rs  bybit.rs  connection.rs  latency.rs  mod.rs  upbit.rs
engine/src/models/: mod.rs
engine/src/normalizer/: mod.rs
engine/src/store/: mod.rs
engine/src/strategy/: mod.rs
engine/src/ws_server/: mod.rs
nginx/: nginx.conf
